# starsrust-with-gui

./: Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/: copilot-instructions.md
src/: events.rs  main.rs  server.rs  visualization.rs
