[package]
name = "starsrust"
version = "1.1.2"
authors = ["Jan Szczesny"]
description = "STARS server"
homepage = "https://stars.kek.jp"
repository = "https://github.com/IMSS-PhotonFactory/starsrust"
license = "MIT"
edition = "2024"

[profile.release]
lto = true
opt-level = 2
panic = "abort"
strip = "symbols"

[[bin]]
name = "stars"
path = "src/main.rs"

[dependencies]
regex = "1"
rand = "0.9.2"
clap = { version = "4.5.47", features = ["derive"] }
configparser = "3.1.0"
dns-lookup = "2.1.1"
chrono = "0.4.42"
bevy = { version = "0.18", default-features = false, features = ["2d"] }
